# template-DJANGO-ANT-REACT-VITE

./: .dockerfile  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  turbo.json  turbopack-config.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  index.scss  index.tsx
server_app/: asgi.py  settings.py  urls.py  wsgi.py
server_app/middleware/: corsMiddleware.py
